--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>843708ab-4d59-4d50-ac75-94ecd6bd7be8</groupId>
 	<artifactId>abc-cicd-demo</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
 
 	<name>abc-cicd-demo</name>
